--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -400,3 +400,16 @@
   	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/NM-sies11.pdf},
   	year =	{2011},
 }
+
+
+@inproceedings{SLDP09,
+	author    = {Jun Sun and Yang Liu and Jin Song Dong and Jun Pang},
+	title     = {{PAT}: Towards Flexible Verification under Fairness},
+	booktitle = {CAV},
+	isbn      = {978-3-642-02657-7},
+	pages     = {709-714},
+	publisher = {Springer},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {5643},
+	year      = {2009},
+}
