Solved an inconsistency in the always sequence observer pattern

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2086,7 +2086,9 @@ We define each of those two components below.
 	$|$ & \styleIMI{everytime <name> then eventually <name> within }\nt{linear\_expression} \styleIMI{} \\
 	$|$ & \styleIMI{everytime <name> then eventually <name> within }\nt{linear\_expression} \styleIMI{ once before next} \\
 	$|$ & \styleIMI{sequence} \nt{var\_list} \\
-	$|$ & \styleIMI{sequence always} \nt{var\_list} \\
+	$|$ & \styleIMI{sequence} \styleIMI{(} \nt{var\_list} \styleIMI{)} \\
+	$|$ & \styleIMI{always sequence} \nt{var\_list} \\
+	$|$ & \styleIMI{always sequence} \styleIMI{(} \nt{var\_list} \styleIMI{)} \\
 \end{tabular}
 
 
