update user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1183,6 +1183,8 @@ In short, \imitator{} is written in \ocaml{}, and contains about 26,000 lines of
 Verification of timed systems (and specially parametric timed systems) is necessarily done in a symbolic manner, in the sense that the timing information is abstracted by clock constraints.
 However, \imitator{} does not perform what is referred to as \emph{symbolic model checking}; in other words, the representation of locations in \imitator{} is explicit (and not symbolic using, \eg{} binary decision diagrams).
 
+% TODO: ``semi-symbolic'' (cf. Ocan @ ETR)
+
 In short, a symbolic state in \imitator{} is made of the following elements:
 \begin{itemize}
 	\item the current location (index) of each \IPTA{};
